--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pbpp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +16,8 @@
     "prettyjson": "^1.2.1",
     "protobufjs": "6.8.6",
     "read-all-stream": "^3.1.0"
+  },
+  "bin": {
+    "pbpp": "src/index.js"
   }
 }
